[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Textures/Packet/Packet_base.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game/Packet/Packet.gd" type="Script" id=2]
[ext_resource path="res://Resources/Textures/Packet/Packet_glow.png" type="Texture" id=3]
[ext_resource path="res://Resources/Textures/Packet/Packet_shadow.png" type="Texture" id=4]
[ext_resource path="res://Resources/Fonts/m5x7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Resources/Textures/Packet/Packet_glow2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 42, 42 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.523179, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=5]
resource_name = "pulsating"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Glow:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.7, 0.7, 0.7, 1 ) ]
}

[node name="Packet" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -42.0
margin_right = 42.0
margin_bottom = 42.0
rect_min_size = Vector2( 84, 84 )
texture = ExtResource( 1 )
patch_margin_left = 12
patch_margin_top = 13
patch_margin_right = 13
patch_margin_bottom = 13
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glow" type="NinePatchRect" parent="Sprite"]
modulate = Color( 0, 1, 0, 1 )
self_modulate = Color( 0.802858, 0.802858, 0.802858, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 84, 84 )
texture = ExtResource( 3 )
patch_margin_left = 23
patch_margin_top = 25
patch_margin_right = 23
patch_margin_bottom = 24
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Shadow" type="NinePatchRect" parent="Sprite"]
modulate = Color( 1, 1, 1, 0.686275 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -13.0
margin_top = -13.0
margin_right = 13.0
margin_bottom = 13.0
rect_min_size = Vector2( 110, 110 )
texture = ExtResource( 4 )
patch_margin_left = 21
patch_margin_top = 18
patch_margin_right = 21
patch_margin_bottom = 18
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PointDisp" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 80, 80 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PointDisp"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -68.0
margin_right = -55.0
margin_bottom = -55.0
custom_fonts/font = SubResource( 2 )
text = "KB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glow2" type="Sprite" parent="."]
modulate = Color( 0, 0.2, 0, 1 )
material = SubResource( 6 )
scale = Vector2( 1.125, 1.125 )
texture = ExtResource( 6 )

[node name="Shape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="ExplosionParticle" type="CPUParticles2D" parent="."]
visible = false
emitting = false
amount = 300
lifetime = 2.0
one_shot = true
speed_scale = 1.4
explosiveness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 42, 42 )
direction = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 1250 )
initial_velocity = 760.0
initial_velocity_random = 1.0
scale_amount = 6.15
color_ramp = SubResource( 4 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "pulsating"
anims/pulsating = SubResource( 5 )
[connection signal="input_event" from="." to="." method="_on_Packet_input_event"]
